country detail UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id "androidx.navigation.safeargs"
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -75,6 +77,7 @@ dependencies {
     //navigation component
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha04"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha04"
+
 
     //MP android chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
