--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.vaccovid19"
+        applicationId "com.sun.vaccovid19"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
