--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,9 @@ dependencies {
 
     //MP android chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    //Room
+    implementation "androidx.room:room-runtime:2.4.0-alpha04"
+    implementation "androidx.room:room-ktx:2.4.0-alpha04"
+    kapt "androidx.room:room-compiler:2.4.0-alpha04"
 }
